# conduit-network-rtp

./: .gitignore  README.md  conduit-network-rtp.cabal  profile-mediabus-demo-rtp-alaw-player.sh  stack.yaml
mediabus-demo-rtp-alaw-player/: Main.hs
mrf/apps/talkflowd_lib/h_src/conduit-network-rtp/: TODO.md  conduit-network-rtp.cabal
mrf/apps/talkflowd_lib/h_src/conduit-network-rtp/mediabus-demo-rtp-alaw-player/: Main.hs
mrf/apps/talkflowd_lib/h_src/conduit-network-rtp/src/Data/MediaBus/: Rtp.hs
specs/Data/: MediaBusSpec.hs
specs/Data/MediaBus/: AdaptiveQueueSpec.hs  BiIndexSpec.hs  BufferSpec.hs  ClockSpec.hs  FrameSpec.hs  PacketizerSpec.hs  ReorderSpec.hs  RingBufferSpec.hs  RtpSpec.hs  SampleSpec.hs  SequenceSpec.hs  SequentialSpec.hs  StreamSegmentSpec.hs  StreamSpec.hs
specs/Data/MediaBus/Audio/: ResampleSpec.hs
specs/Data/MediaBus/Internal/: BiIndexSpec.hs  RingBufferSpec.hs
src/Data/: MediaBus.hs
src/Data/Conduit/: Encoding.hs
src/Data/Conduit/Audio/: Alaw.hs  Event.hs  JitterBuffer.hs  Partial.hs  Pcm.hs  PcmDebugSink.hs  Reorder.hs  RtpAlawSource.hs  RtpPacket.lhs  RtpSource.hs
src/Data/MediaBus/: AdaptiveQueue.hs  AsyncConduit.hs  Basics.hs  BiIndex.hs  BlankMedia.hs  Buffer.hs  Clock.hs  Conduit.hs  DebugSink.hs  Discontinous.hs  Frame.hs  Ordered.hs  Packetizer.hs  Reorder.hs  RingBuffer.hs  Rtp.hs  Sample.hs  Sequence.hs  Sequential.hs  SourceId.hs  Stream.hs  StreamSegment.hs  Synchronous.hs  Ticks.hs  Transcoder.hs
src/Data/MediaBus/Applications/: RtpAlawAudio.hs
src/Data/MediaBus/Audio/: Alaw.hs  Channels.hs  Format.hs  PcmDebugSink.hs  Raw.hs  Resample.hs
src/Data/MediaBus/Internal/: AsyncConduit.hs  BiIndex.hs  Conduit.hs  Monotone.hs  OrderedBy.hs  Relative.hs  RingBuffer.hs  Series.hs
src/Data/MediaBus/Rtp/: Packet.lhs
src/Data/MediaBus/Transport/: Udp.hs
