name:                conduit-network-rtp
version:             0.2.0.0
synopsis:            Receive and Send RTP Packets on top of Conduit
description:         Please see README.md
homepage:            https://github.com/sheyll/conduit-network-rtp#readme
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016 Sven Heyll, Lindenbaum GmbH
category:            Audio
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Audio.Alaw
                     , Data.Conduit.Audio.Event
                     , Data.Conduit.Audio.Partial
                     , Data.Conduit.Audio.PcmDebugSink
                     , Data.Conduit.Audio.Pcm
                     , Data.Conduit.Audio.Reorder
                     , Data.Conduit.Audio.RtpAlawSource
                     , Data.Conduit.Audio.RtpPacket
                     , Data.Conduit.Audio.RtpSource
                     , Data.MediaBus.Sequential
                     , Data.MediaBus.RingBuffer
  default-language:    Haskell2010
  ghc-options:       -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fprint-explicit-kinds
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       array
                     , base >= 4.9 && < 5
                     , bytestring >= 0.10.8 && < 0.11
                     , cereal >= 0.5.3 && < 0.6
                     , conduit >= 1.2.7 && < 1.3
                     , conduit-extra >= 1.1 && < 1.2
                     , containers >= 0.5 && < 0.6
                     , network >= 2.6 && < 2.7
                     , data-default >= 0.7.1.1 && < 1
                     , primitive >= 0.6 && < 0.7
                     , process >= 1.4 && < 1.5
                     , resourcet >= 1.1 && < 1.2
                     , spool == 0.1
                     , streaming-commons >= 0.1 && < 0.2
                     , text >= 1.2.2.1 && < 2
                     , vector >= 0.11 && < 0.12

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             Spec.hs
  other-modules:       Data.MediaBus.RingBufferSpec
                     , Data.MediaBus.SequentialSpec

  default-language:    Haskell2010
  build-depends:       QuickCheck >= 2.8 && < 3
                     , array
                     , base >= 4.9 && < 5
                     , binary
                     , bytestring
                     , conduit-network-rtp
                     , containers
                     , data-default >= 0.7.1.1 && < 1
                     , deepseq
                     , hspec
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 3
                     , singletons >= 2.2 && < 3
                     , spool == 0.1
                     , tagged >= 0.8 && < 1
                     , template-haskell
                     , text >= 1.2.2.1 && < 2
                     , time
                     , transformers
                     , type-spec
                     , vector >= 0.11 && < 0.12
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
                     , Arrows
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , QuasiQuotes
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  ghc-options:       -threaded
                     -rtsopts -with-rtsopts=-N
                     -j +RTS -A256m -n2m -RTS
                     -Wall
                     -O0
                     -fno-warn-unused-binds
                     -fno-warn-orphans
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fprint-explicit-kinds

source-repository head
  type:     git
  location: https://github.com/lindenbaum/conduit-network-rtp
