name:                conduit-network-rtp
version:             0.2.0.0
synopsis:            Receive and Send RTP Packets on top of Conduit
description:         Please see README.md
homepage:            https://github.com/sheyll/conduit-network-rtp#readme
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016,2017 Sven Heyll, Lindenbaum GmbH
category:            Audio
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Data.MediaBus
                     , Data.MediaBus.Audio.Raw
                     , Data.MediaBus.Audio.Alaw
                     , Data.MediaBus.Audio.Channels
                     , Data.MediaBus.Audio.Resample
                     , Data.MediaBus.SourceId
                     , Data.MediaBus.Clock
                     , Data.MediaBus.DebugSink
                     , Data.MediaBus.Stream
                     , Data.MediaBus.Internal.AsyncConduit
                     , Data.MediaBus.Internal.BiIndex
                     , Data.MediaBus.Internal.Conduit
                     , Data.MediaBus.Internal.Monotone
                     , Data.MediaBus.Internal.Series
                     , Data.MediaBus.Internal.RingBuffer
                     , Data.MediaBus.Sample
                     , Data.MediaBus.Sequence
                     , Data.MediaBus.Transport.Udp
                     , Data.MediaBus.Rtp.Packet
                     , Data.MediaBus.Rtp
  default-language:    Haskell2010
  ghc-options:       -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fprint-explicit-kinds
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.9 && < 5
                     , bytestring
                     , cereal
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , data-default
                     , lens
                     , mtl
                     , network
                     , primitive
                     , process
                     , random
                     , resourcet
                     , spool == 0.1
                     , streaming-commons
                     , tagged
                     , text
                     , time
                     , transformers
                     , vector

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             Spec.hs
  other-modules:       Data.MediaBus.Audio.ResampleSpec
                     , Data.MediaBus.Internal.BiIndexSpec
                     , Data.MediaBus.Internal.RingBufferSpec
                     , Data.MediaBus.ClockSpec
                     , Data.MediaBus.StreamSpec
                     , Data.MediaBus.RtpSpec
                     , Data.MediaBus.SampleSpec
                     , Data.MediaBus.SequenceSpec
  default-language:    Haskell2010
  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.9 && < 5
                     , binary
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , conduit-network-rtp
                     , containers
                     , data-default
                     , deepseq
                     , hspec
                     , lens
                     , mtl
                     , singletons
                     , spool == 0.1
                     , tagged
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , type-spec
                     , vector
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
                     , Arrows
                     , BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , EmptyCase
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  ghc-options:       -threaded
                     -rtsopts -with-rtsopts=-N
                     -j +RTS -A256m -n2m -RTS
                     -Wall
                     -O0
                     -fno-warn-unused-binds
                     -fno-warn-orphans
                     -fno-warn-unused-do-bind
                     -fno-warn-missing-signatures
                     -fno-warn-type-defaults
                     -fprint-explicit-kinds

source-repository head
  type:     git
  location: https://github.com/lindenbaum/conduit-network-rtp
